--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,36 +1,59 @@
+@import "fonts.css";
+
 .wrap {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   gap: 2.5rem;
 }
 .tile {
-  background-color: #eee;
+  background-color: white;
   position: relative;
+  color: black;
   display: inline-block;
-  border-radius: 25px;
+  border-radius: 0px;
   padding: 2rem;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  /*box-shadow: 0 1px 2px rgba(0,0,0,0.15);*/
   -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);;
 }
 .tile::after {
   content: "";
-  border-radius: 25px;
+  border-radius: 0px;
   position: absolute;
   z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);*/
   opacity: 0;
   -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .tile:hover {
   -webkit-transform: scale(1.02, 1.02);
-  transform: scale(1.02, 1.02);
+  transform: scale(1.5, 1.5);
 }
 .tile:hover::after {
   opacity: 1;
+}
+
+.style-red{
+  background-color: #ED1C24;
+  color: white;
+}
+
+.style-white{
+  background-color: #FFFFFF;
+}
+
+.style-blue{
+  background-color: #201CED;
+  color: white;
+}
+
+.style-yellow{
+  background-color: #F8C923;
+  color: black;
+  border-radius: 500px;
 }
