--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,8 @@
-.wrap {
+.intro {
+  max-width: 50vw;
+  margin: 20rem auto;
+}
+.profile-tiles {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   gap: 2.5rem;
