--- a/src/components/global.css
+++ b/src/components/global.css
@@ -67,7 +67,7 @@ a:active,
 a:hover {
   outline-width: 0;
   font-style: italic;
-  color: #ED1C24;
+  color: inherit;
 }
 abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
