--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,3 @@
-@import "fonts.css";
-
 .wrap {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
@@ -13,8 +11,8 @@
   border-radius: 0px;
   padding: 2rem;
   /*box-shadow: 0 1px 2px rgba(0,0,0,0.15);*/
-  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);;
+  -webkit-transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);;
 }
 .tile::after {
   content: "";
@@ -27,12 +25,8 @@
   height: 100%;
   /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);*/
   opacity: 0;
-  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-.tile:hover {
-  -webkit-transform: scale(1.02, 1.02);
-  transform: scale(1.5, 1.5);
+  -webkit-transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .tile:hover::after {
   opacity: 1;
@@ -56,4 +50,15 @@
   background-color: #F8C923;
   color: black;
   border-radius: 500px;
+  -webkit-transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);;
+}
+.style-yellow:hover{
+  scale: 1.05;
+}
+
+@media only screen and (max-width: 600px) {
+  .wrap {
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  }
 }
