--- a/src/components/instagram.css
+++ b/src/components/instagram.css
@@ -1,5 +1,6 @@
 .blaurund{
-    background-color: black;
+    background: rgb(131,58,180);
+background: linear-gradient(131deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 39%, rgba(252,176,69,1) 100%);
     color: white;
     position: fixed;
     bottom: 50px;
