--- a/src/components/instagram.css
+++ b/src/components/instagram.css
@@ -1,6 +1,6 @@
 .blaurund{
     background: rgb(131,58,180);
-background: linear-gradient(131deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 39%, rgba(252,176,69,1) 100%);
+    background: linear-gradient(131deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 39%, rgba(252,176,69,1) 100%);
     color: white;
     position: fixed;
     bottom: 50px;
@@ -11,3 +11,10 @@ background: linear-gradient(131deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 39%
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 }
+
+@media only screen and (max-width: 600px) {
+    .blaurund{
+        bottom: 20px;
+        right: 20px;
+    }
+  }
