--- a/src/components/global.css
+++ b/src/components/global.css
@@ -7,6 +7,7 @@ html {
   box-sizing: border-box;
   overflow-y: scroll;
   overflow-x: hidden;
+  background-color: #ffffff;
 }
 body {
   margin: 0;
