hide lorem ipsum

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -44,10 +44,15 @@
   background-color: #FFFFFF;
 }
 
+.style-hidden{
+  display: none;
+}
+
 .style-green{
   background-color: #099E18;
   border-radius: 200px;
 }
+
 
 .style-blue{
   background-color: #201CED;
