--- a/src/components/global.css
+++ b/src/components/global.css
@@ -17,7 +17,7 @@ body {
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
-  background-color: #EDE9E4;
+  background-color: #ffffff;
   -moz-font-feature-settings: "kern", "liga", "clig", "calt";
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
